Updated Travis config

--- a/src/app/app.styles.scss
+++ b/src/app/app.styles.scss
@@ -250,6 +250,12 @@ main {
             list-style-type: disc;
         }
     }
+    ul.select-dropdown {
+        padding: 0;
+        li {
+            list-style-type: none;
+        }
+    }
     dd {
         margin: 0;
     }
