Updated routing etc. to work with router 3.0.0 rc1

--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -4,8 +4,8 @@
             <div class="nav-wrapper">
                 <div class="row">
                     <div class="col m8 l9 navbar-brand">
-                        <ul menu="mobile" id="main-menu" class="side-nav"></ul>
-                        <a href="#" materialize="sideNav" [materializeParams]="[{closeOnClick: true, edge: 'left', menuWidth: 330}]" data-activates="main-menu" class="button-collapse">
+                        <ul menu="mobile" id="mobile-menu" class="side-nav"></ul>
+                        <a href="#" materialize="sideNav" [materializeParams]="[{closeOnClick: true, edge: 'left', menuWidth: 330}]" data-activates="mobile-menu" class="button-collapse">
                             <i class="material-icons">menu</i>
                         </a>
                         <a [routerLink]="['/']" class="brand-logo"><img src="app/assets/images/logos/scvo-white.png" /> SCVO <span class="version">alpha</span></a>
