Upgraded to Angular CLI

--- a/src/app/components/dynamic/cms/drupal-page.component.html
+++ b/src/app/components/dynamic/cms/drupal-page.component.html
@@ -11,7 +11,7 @@
     <!-- <div *ngIf="content_category" [innerHTML]="content_category"></div>
     <div *ngIf="content_subcategory" [innerHTML]="content_subcategory"></div> -->
 
-    <div class="drupal page body" *ngIf="content_body_format == 'markdown'" [innerHTML]="content_body | markdown"></div>
+    <!-- <div class="drupal page body" *ngIf="content_body_format == 'markdown'" [innerHTML]="content_body | markdown"></div> -->
     <div class="drupal page body" *ngIf="content_body_format == 'basic_html' || content_body_format == 'full_html'" [innerHTML]="content_body"></div>
     <div class="drupal page body" *ngIf="content_body_format == 'plaintext'">{{content_body}}</div>
 
@@ -23,4 +23,4 @@
     <p class="drupal page error title">{{error_message}}</p>
 </div>
 
-<cms-post-list></cms-post-list>
+<!-- <cms-post-list></cms-post-list> -->
