--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col s12">
-                <breadcrumb></breadcrumb>
+                <!-- <breadcrumb></breadcrumb> -->
                 <router-outlet></router-outlet>
             </div>
         </div>
