--- a/src/app/components/dynamic/cms/drupal-post.component.html
+++ b/src/app/components/dynamic/cms/drupal-post.component.html
@@ -3,14 +3,14 @@
 
     <h1 [innerHTML]="content_title" class="light drupal post title"></h1>
 
-    <p *ngIf="content_tags" class="drupal post tags">Tags: <span *ngFor="let tag of content_tags | mapToIterable"><a [routerLink]="['/tags/'+tag.val]">{{tag.val}}</a> </span></p>
+    <!-- <p *ngIf="content_tags" class="drupal post tags">Tags: <span *ngFor="let tag of content_tags | mapToIterable"><a [routerLink]="['/tags/'+tag.val]">{{tag.val}}</a> </span></p> -->
     <!-- <pre>{{content_tags | json}}</pre> -->
 
     <h2 *ngIf="content_subheading" [innerHTML]="content_subheading" class="light drupal post subheading"></h2>
 
     <!-- <p class="timestamp">Last updated: {{content_revision_timestamp | date:'yyyy-MM-dd H:mm:ss'}}</p> -->
 
-    <div class="drupal post body" *ngIf="content_body_format == 'markdown'" [innerHTML]="content_body | markdown"></div>
+    <!-- <div class="drupal post body" *ngIf="content_body_format == 'markdown'" [innerHTML]="content_body | markdown"></div> -->
     <div class="drupal post body" *ngIf="content_body_format == 'basic_html' || content_body_format == 'full_html'" [innerHTML]="content_body"></div>
     <div class="drupal post body" *ngIf="content_body_format == 'plaintext'">{{content_body}}</div>
 
