--- a/src/app/components/static/home.component.html
+++ b/src/app/components/static/home.component.html
@@ -2,7 +2,7 @@
 
 <div class="row">
     <div class="col s12">
-        <h1 class="light center"><acronym title="Scottish Council for Voluntary Organisations">SCVO</acronym> is the membership organisation for Scotland's charities, voluntary organisations and social enterprises</h1>
+        <h1 class="light center"><abbr title="Scottish Council for Voluntary Organisations">SCVO</abbr> is the membership organisation for Scotland's charities, voluntary organisations and social enterprises</h1>
     </div>
 </div>
 <div class="row">
