Refactored to use new CMS

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,12 @@
 
 <main class="{{pathClasses}}">
     <div class="container-fluid">
-        <div class="row">
+        <div class="row container-breadcrumb">
             <div class="col s12">
-                <!-- <breadcrumb></breadcrumb> -->
-                <router-outlet></router-outlet>
+                <breadcrumb prefix="SCVO"></breadcrumb>
             </div>
         </div>
+        <router-outlet></router-outlet>
     </div>
 </main>
 
