--- a/src/app/app.styles.scss
+++ b/src/app/app.styles.scss
@@ -206,7 +206,7 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
     font-size: 2.7rem;
     font-weight: 600;
-    margin: 0.5em 0;
+    margin: 0 0 0.5em;
 }
 h2 {
     font-size: 2.0rem;
@@ -244,7 +244,7 @@ main {
     .card a:link, a.btn:link {
         text-decoration: none;
     }
-    ul {
+    ul:not(.browser-default) {
         padding: 0 0 0 1.5rem;
         li {
             list-style-type: disc;
@@ -381,10 +381,10 @@ main.running-your-organisation a {
     color: #303f9f;
 }
 
-header.employability, header.employability .navbar .dropdown-content, main.employability .btn {
+header.jobs, header.jobs .navbar .dropdown-content, main.jobs .btn {
     background-color: #2e7d32;
 }
-main.employability a {
+main.jobs a {
     color: #2e7d32;
 }
 
@@ -393,7 +393,6 @@ header.services, header.services .navbar .dropdown-content, main.services .btn {
     background-color: #880e4f;
 }
 main.join-scvo a,
-main.events.the-gathering a,
 main.services a {
     color: #880e4f;
 }
@@ -412,21 +411,21 @@ main.events a {
     color: #263238;
 }
 
-header.training, header.training .navbar .dropdown-content, main.training .btn {
+header.projects-campaigns, header.projects-campaigns .navbar .dropdown-content, main.projects-campaigns .btn {
     background-color: #00838f;
 }
-main.training a {
+main.projects-campaigns a {
     color: #00838f;
 }
 
-header.media-centre, header.media-centre .navbar .dropdown-content, main.media-centre .btn,
+header.press-media, header.press-media .navbar .dropdown-content, main.press-media .btn,
 header.tags, header.tags .navbar .dropdown-content, main.tags .btn,
-header.policy, header.policy .navbar .dropdown-content, main.policy .btn {
+header.policy-research, header.policy-research .navbar .dropdown-content, main.policy-research .btn {
     background-color: #e64a19;
 }
-main.media-centre a,
+main.press-media a,
 main.tags a,
-main.policy a {
+main.policy-research a {
     color: #e64a19;
 }
 
@@ -537,16 +536,16 @@ a.btn {
     }
     .version {
         position: absolute;
-        top: 20px;
-        right: -30px;
+        top: 18px;
+        left: 27px;
         line-height: 1em;
         font-family: $base-font-family;
         font-size: 0.9rem;
         font-variant: small-caps;
-        -webkit-transform: rotate(60deg);
-        -moz-transform: rotate(60deg);
-        -ms-transform: rotate(60deg);
-        -o-transform: rotate(60deg);
+        -webkit-transform: rotate(66deg);
+        -moz-transform: rotate(66deg);
+        -ms-transform: rotate(66deg);
+        -o-transform: rotate(66deg);
     }
 }
 .brand-logo.hide-on-med-and-down {
@@ -562,24 +561,38 @@ a.btn {
 
 // Breadcrumb ==================================================================
 
+.container-breadcrumb.row {
+    margin-bottom: 0;
+}
+.home .container-breadcrumb {
+    display: none;
+}
 .breadcrumb {
     padding: 0 !important;
     li:first-child {
-        display: none !important;
+        // display: none !important;
     }
-    li a {
-        cursor: pointer;
-        text-decoration: underline;
-        font-size: 1.3rem;
+    li {
+        font-size: 0.9rem;
         font-weight: 600;
+        display: inline-block;
+        a {
+            cursor: pointer;
+            font-weight: 600;
+            text-decoration: underline;
+        }
+    }
+    li::after {
+        content: '>';
+        padding: 0 0.5rem;
+        color: #555;
     }
 }
 .about-us .breadcrumb li {
     display: inline-block !important;
 }
 .events .breadcrumb,
-.training .breadcrumb,
-.services .breadcrumb {
+.training .breadcrumb {
     display: none;
 }
 // .breadcrumb li:after {
@@ -587,13 +600,14 @@ a.btn {
 //     padding: 0 10px 0 5px !important;
 //     color: #999999 !important;
 // }
-.breadcrumb > li + li:last-child:after,
-.breadcrumb > li + li:before {
+.breadcrumb > li:last-child::after,
+.breadcrumb > li:before {
     content: " " !important;
     padding: 0 !important;
 }
 .breadcrumb li.active {
-    display: none !important;
+    // display: none !important;
+    color: #555;
 }
 
 
