--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -10,7 +10,7 @@
                 <div class="col l2 m3 s6 offset-m1 offset-l1">
                     <!-- <h5>Contact</h5> -->
                     <ul>
-                        <li><a class="grey-text text-lighten-3" [routerLink]="['/about-us']">About us</a></li>
+                        <li><a class="grey-text text-lighten-3" [routerLink]="['/about']">About SCVO</a></li>
                         <li><a class="grey-text text-lighten-3" [routerLink]="['/terms-and-conditions']">Terms &amp; conditions</a></li>
                         <li><a class="grey-text text-lighten-3" [routerLink]="['/privacy-and-cookies']">Privacy &amp; cookies</a></li>
                         <li><a class="grey-text text-lighten-3" [routerLink]="['/accessibility']">Accessibility</a></li>
