--- a/src/app/app.styles.scss
+++ b/src/app/app.styles.scss
@@ -616,10 +616,10 @@ a.btn {
 .about-us .breadcrumb li {
     display: inline-block !important;
 }
-.events .breadcrumb,
-.training .breadcrumb {
-    display: none;
-}
+// .events .breadcrumb,
+// .training .breadcrumb {
+//     display: none;
+// }
 // .breadcrumb li:after {
 //     content: "/" !important;
 //     padding: 0 10px 0 5px !important;
