--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -26,5 +26,11 @@
         &nbsp;<br />
         &nbsp;<br />
         &nbsp;<br />
+        New website in development
+        &nbsp;<br />
+        &nbsp;<br />
+        &nbsp;<br />
+        &nbsp;<br />
+        &nbsp;<br />
     </div>
 </div>
