Breadcrumb fixes and mockups

--- a/src/app/app.styles.scss
+++ b/src/app/app.styles.scss
@@ -2,160 +2,6 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,700);
 @import url(https://fonts.googleapis.com/css?family=Lato:900);
 
-.spinner-wrapper {
-    position: fixed;
-    top: 40%;
-    left: 46%;
-    z-index: 1000;
-    .preloader-wrapper {
-        margin-left: -32px;
-        margin-top: -32px;
-    }
-    p {
-        text-align: center;
-    }
-    .spinner {
-        -moz-animation: rotate 10s infinite linear;
-        -webkit-animation: rotate 10s infinite linear;
-        animation: rotate 10s infinite linear;
-        position: relative;
-        display: block;
-        margin: auto;
-        width: 142px;
-        height: 142px;
-        i {
-            -moz-animation: rotate 3s infinite cubic-bezier(0.09, 0.6, 0.8, 0.03);
-            -webkit-animation: rotate 3s infinite cubic-bezier(0.09, 0.6, 0.8, 0.03);
-            animation: rotate 3s infinite cubic-bezier(0.09, 0.6, 0.8, 0.03);
-            -moz-transform-origin: 50% 100% 0;
-            -webkit-transform-origin: 50% 100% 0;
-            transform-origin: 50% 100% 0;
-            position: absolute;
-            display: inline-block;
-            top: 50%;
-            left: 50%;
-            border: solid 6px transparent;
-            border-bottom: none;
-        }
-        i:nth-child(1) {
-            -moz-animation-timing-function: cubic-bezier(0.09, 0.3, 0.12, 0.03);
-            -webkit-animation-timing-function: cubic-bezier(0.09, 0.3, 0.12, 0.03);
-            animation-timing-function: cubic-bezier(0.09, 0.3, 0.12, 0.03);
-            width: 44px;
-            height: 22px;
-            margin-top: -22px;
-            margin-left: -22px;
-            border-color: #303f9f;
-            border-top-left-radius: 36px;
-            border-top-right-radius: 36px;
-        }
-        i:nth-child(2) {
-            -moz-animation-timing-function: cubic-bezier(0.09, 0.6, 0.24, 0.03);
-            -webkit-animation-timing-function: cubic-bezier(0.09, 0.6, 0.24, 0.03);
-            animation-timing-function: cubic-bezier(0.09, 0.6, 0.24, 0.03);
-            width: 58px;
-            height: 29px;
-            margin-top: -29px;
-            margin-left: -29px;
-            border-color: #2e7d32;
-            border-top-left-radius: 42px;
-            border-top-right-radius: 42px;
-        }
-        i:nth-child(3) {
-            -moz-animation-timing-function: cubic-bezier(0.09, 0.9, 0.36, 0.03);
-            -webkit-animation-timing-function: cubic-bezier(0.09, 0.9, 0.36, 0.03);
-            animation-timing-function: cubic-bezier(0.09, 0.9, 0.36, 0.03);
-            width: 72px;
-            height: 36px;
-            margin-top: -36px;
-            margin-left: -36px;
-            border-color: #880e4f;
-            border-top-left-radius: 48px;
-            border-top-right-radius: 48px;
-        }
-        i:nth-child(4) {
-            -moz-animation-timing-function: cubic-bezier(0.09, 1.2, 0.48, 0.03);
-            -webkit-animation-timing-function: cubic-bezier(0.09, 1.2, 0.48, 0.03);
-            animation-timing-function: cubic-bezier(0.09, 1.2, 0.48, 0.03);
-            width: 86px;
-            height: 43px;
-            margin-top: -43px;
-            margin-left: -43px;
-            border-color: #4527a0;
-            border-top-left-radius: 54px;
-            border-top-right-radius: 54px;
-        }
-        i:nth-child(5) {
-            -moz-animation-timing-function: cubic-bezier(0.09, 1.5, 0.6, 0.03);
-            -webkit-animation-timing-function: cubic-bezier(0.09, 1.5, 0.6, 0.03);
-            animation-timing-function: cubic-bezier(0.09, 1.5, 0.6, 0.03);
-            width: 100px;
-            height: 50px;
-            margin-top: -50px;
-            margin-left: -50px;
-            border-color: #e64a19;
-            border-top-left-radius: 60px;
-            border-top-right-radius: 60px;
-        }
-        i:nth-child(6) {
-            -moz-animation-timing-function: cubic-bezier(0.09, 1.8, 0.72, 0.03);
-            -webkit-animation-timing-function: cubic-bezier(0.09, 1.8, 0.72, 0.03);
-            animation-timing-function: cubic-bezier(0.09, 1.8, 0.72, 0.03);
-            width: 114px;
-            height: 57px;
-            margin-top: -57px;
-            margin-left: -57px;
-            border-color: #00838f;
-            border-top-left-radius: 66px;
-            border-top-right-radius: 66px;
-        }
-        i:nth-child(7) {
-            -moz-animation-timing-function: cubic-bezier(0.09, 2.1, 0.84, 0.03);
-            -webkit-animation-timing-function: cubic-bezier(0.09, 2.1, 0.84, 0.03);
-            animation-timing-function: cubic-bezier(0.09, 2.1, 0.84, 0.03);
-            width: 128px;
-            height: 64px;
-            margin-top: -64px;
-            margin-left: -64px;
-            border-color: #e64a19;
-            border-top-left-radius: 72px;
-            border-top-right-radius: 72px;
-        }
-        i:nth-child(8) {
-            -moz-animation-timing-function: cubic-bezier(0.09, 2.4, 0.96, 0.03);
-            -webkit-animation-timing-function: cubic-bezier(0.09, 2.4, 0.96, 0.03);
-            animation-timing-function: cubic-bezier(0.09, 2.4, 0.96, 0.03);
-            width: 142px;
-            height: 71px;
-            margin-top: -71px;
-            margin-left: -71px;
-            border-color: #5d3191;
-            border-top-left-radius: 78px;
-            border-top-right-radius: 78px;
-        }
-        @-moz-keyframes rotate {
-            to {
-                -moz-transform: rotate(360deg);
-                transform: rotate(360deg);
-            }
-        }
-        @-webkit-keyframes rotate {
-            to {
-                -webkit-transform: rotate(360deg);
-                transform: rotate(360deg);
-            }
-        }
-        @keyframes rotate {
-            to {
-                -moz-transform: rotate(360deg);
-                -ms-transform: rotate(360deg);
-                -webkit-transform: rotate(360deg);
-                transform: rotate(360deg);
-            }
-        }
-    }
-}
-
 
 // Base variables ==============================================================
 
@@ -608,8 +454,8 @@ a.btn {
         }
     }
     li::after {
-        content: '>';
-        padding: 0 0.5rem;
+        content: '/';
+        padding: 0 0.25rem;
         color: #555;
     }
 }
@@ -634,7 +480,9 @@ a.btn {
     // display: none !important;
     color: #555;
 }
-
+.admin .breadcrumb {
+    display: none;
+}
 
 // Content =====================================================================
 
@@ -658,294 +506,3 @@ footer a {
     text-decoration: underline;
     text-decoration-skip: ink;
 }
-
-
-// Misc. =======================================================================
-
-// a, :focus {
-//     outline: 0;
-// }
-// ul {
-//     padding-left: 0;
-//     list-style-type: none;
-// }
-// blockquote {
-//     font-size: inherit;
-//     margin: 0 0 10px;
-//     padding-top: 0;
-//     padding-bottom: 0;
-// }
-// .loading {
-//     margin: 10em 0;
-// }
-// .header,
-// .content {
-//     background-color: #ECEFF1;
-// }
-// .content {
-//     padding-bottom: 15px;
-// }
-// .panel-success .panel-heading {
-//     color: white;
-// }
-// .progress {
-//     position: relative;
-//     margin-bottom: 0;
-//     height: 1.5em;
-//     span {
-//         position: absolute;
-//         display: block;
-//         width: 100%;
-//         color: white;
-//         padding: 1px 5px;
-//         text-align: left;
-//     }
-// }
-//
-// // Navigation ==================================================================
-//
-// .navbar {
-//     margin-bottom: 0;
-//     background-color: transparent;
-//     .navbar-brand img {
-//         width: 50%;
-//         min-width: 108px;
-//         margin-top: 5px;
-//     }
-//     .navbar-form {
-//         padding: 0;
-//         margin-bottom: 0;
-//         margin-top: 15px;
-//         border: none;
-//         box-shadow: none;
-//         .btn {
-//             padding: 8px 10px;
-//         }
-//         .input-group .input-group-btn {
-//             width: 1%;
-//         }
-//         .glyphicon-search, .glyphicon-search a {
-//             color: #d2d2d2;
-//         }
-//         .btn:active:not(.btn-link):not(.btn-flat):not(.btn-fab),
-//         .btn:hover:not(.btn-link):not(.btn-flat):not(.btn-fab) {
-//             box-shadow: none;
-//         }
-//         .btn.withoutripple .ripple-wrapper {
-//             display: none;
-//         }
-//         .form-control {
-//             background-image: linear-gradient(#fff, #fff), linear-gradient(#d2d2d2, #d2d2d2)
-//         }
-//     }
-//     .navbar-collapse {
-//         padding: 0;
-//     }
-//     .navbar-nav > li > a {
-//         padding-top: 15px;
-//         padding-bottom: 15px;
-//     }
-//     .dropdown-menu li > a:hover,
-//     .dropdown-menu li > a:focus {
-//         color: #666 !important;
-//     }
-//     .form-control:focus, .form-control.focus {
-//         background-image: linear-gradient(#fff, #fff), linear-gradient(#d2d2d2, #d2d2d2);
-//     }
-// }
-//
-// // Page specific ===============================================================
-//
-// .home {
-//     .panel {
-//         margin-top: 15px;
-//         .panel-body {
-//             padding: 0;
-//             img {
-//                 width: 100%;
-//             }
-//             p {
-//                 margin: 15px;
-//             }
-//         }
-//     }
-//     .navbar {
-//         background-color: #00796B;
-//     }
-// }
-//
-// .policy {
-//     .navbar {
-//         background-color: #EF6C00;
-//     }
-// }
-// .jobs {
-//     .navbar {
-//         background-color: #558B2F;
-//     }
-// }
-// .help {
-//     .navbar {
-//         background-color: #0277BD;
-//     }
-// }
-// .support {
-//     .navbar {
-//         background-color: #283593;
-//     }
-// }
-// .about {
-//     .navbar {
-//         background-color: #AD1457;
-//     }
-// }
-// .cjs {
-//     .navbar {
-//         background-color: #a6b830;
-//     }
-// }
-//
-// // Page specific - Search ======================================================
-//
-// .search .page-title h1 {
-//     display: none;
-// }
-//
-// // Page specific - The Gathering ===============================================
-//
-// .gathering {
-//     .navbar {
-//         background-color: #212121;
-//     }
-//     .btn-primary:not(.btn-link):not(.btn-flat),
-//     .page-title {
-//         background: #864cb2;
-//         .container-fluid {
-//             background: url('http://gatherscotland.org.uk/wp-content/themes/ward/img/gathering2016-logo-with-dates.png') no-repeat 15px;
-//             height: 100px;
-//             h1 {
-//                 display: none;
-//             }
-//         }
-//     }
-// }
-//
-// // Page specific - Scottish Charity Awards =====================================
-//
-// .scottish-charity-awards {
-//     .navbar {
-//         background-color: #000;
-//     }
-//     .page-title {
-//         background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.7)), url('https://scontent-lhr3-1.xx.fbcdn.net/hphotos-xap1/v/t1.0-9/11168891_10152920500092654_3904128374930610556_n.jpg?oh=ba57c8af3cd869716d6f1fccf66b3975&oe=5767EAB9') bottom;
-//         background-size: cover;
-//         height: 250px;
-//         h1 {
-//             color: white;
-//             margin-top: 160px;
-//             font-size: 4em;
-//         }
-//     }
-//     .panel {
-//         .panel-body {
-//             img {
-//                 width: auto;
-//             }
-//             h3 {
-//                 padding-left: 15px;
-//             }
-//         }
-//     }
-// }
-//
-// // Page specific - Digital Participation =======================================
-//
-// .digital_participation.home {
-//     .page-title {
-//         text-align: center;
-//         padding-top: 30px;
-//         background-color: #b9e0f1;
-//         background-position: center center;
-//         background-size: cover;
-//         background-repeat: no-repeat;
-//         background-image: url('http://digital.scvo.org.uk/images/splash.jpg');
-//         background-size: cover;
-//         height: 400px;
-//         .container-fluid {
-//             background-color: rgba(255, 255, 255, 0.8);
-//             margin-bottom: 15px;
-//             padding: 50px 0;
-//         }
-//         h1 {
-//             font-weight: bold;
-//             color: #345476;
-//             text-shadow: 0px 1px 1px white;
-//             margin-bottom: 20px;
-//             font-size: 63px;
-//             font-weight: 700;
-//             letter-spacing: -0.03em;
-//         }
-//         p {
-//             font-size: 1.4em;
-//         }
-//     }
-// }
-// .digital_participation {
-//     .navbar {
-//         background-color: #009E99;
-//     }
-//     .page-navigation {
-//         background-color: #222;
-//         .container-fluid {
-//             padding: 0;
-//         }
-//         .nav {
-//             li > a {
-//                 color: #9d9d9d;
-//             }
-//             li > a:hover,
-//             li > a:focus,
-//             li > a:active {
-//                 color: #fff;
-//                 background-color: inherit;
-//             }
-//         }
-//     }
-// }
-//
-//
-// // Media queries - responsive ==================================================
-//
-// @media screen and (max-width: 767px) {
-//     .navbar {
-//         .navbar-brand {
-//             padding-left: 0;
-//             margin-left: -15px;
-//         }
-//         .navbar-form {
-//             margin-top: 0;
-//         }
-//         .navbar-header {
-//             padding: 0;
-//             .navbar-toggle {
-//                 margin-right: 0;
-//             }
-//         }
-//         .navbar-collapse,
-//         .navbar-form {
-//             border-color: transparent;
-//             box-shadow: none;
-//         }
-//         .navbar-nav {
-//             margin: 0;
-//             li > a {
-//                 padding: 5px 3px;
-//             }
-//         }
-//         .navbar-form {
-//             .form-control {
-//                 margin-left: 4px;
-//             }
-//         }
-//     }
-// }
